[package]
name = "rustjourneyplanner"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
debug = 0
strip = true
codegen-units = 1

[dependencies]
chrono = "0.4.31"
leptonic = "0.3.0"
leptos = { version = "0.5.2", features = ["csr"] }
leptos-use = "0.8.2"
petgraph = "0.6.4"
reqwest = "0.11.22"
serde_json = "1.0.108"
web-sys = "0.3.66"

[build-dependencies]
leptonic-theme = "0.3.0"
leptos-tiptap-build = "0.2.4"
