workspace = { members = [ "tools/build_theme","tools/eve_sde", "tools/eve_sde_cli" ] }

[package]
name = "rustjourneyplanner"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
debug = 0
strip = true
codegen-units = 1

[dependencies]
chrono = "0.4.31"
console_error_panic_hook = "0.1.7"
eve_sde = { path = "tools/eve_sde" }
itertools = "0.12.0"
leptonic = { git = "https://github.com/tordynnar/leptonic.git", branch = "all-changes", features = ["csr"] }
leptos = { version = "0.5.2", features = ["csr"] }
leptos-use = "0.8.2"
leptos_icons = { version = "0.1.0", features = ["BsGithub", "CgSwap"] }
petgraph = "0.6.4"
reqwest = "0.11.22"
serde = { version ="1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.40"
tracing-wasm = "0.2.1"
uuid = { version = "1.6.1", features = ["v4", "js", "serde"] }
web-sys = "0.3.66"
